Einige Fehlerkorrekturen in mehreren Kapiteln.

--- a/Acronym.tex
+++ b/Acronym.tex
@@ -12,7 +12,7 @@
 	\acro{VO2}[\.{V}O\textsubscript{2}]{Sauerstoffaufnahme}
 	\acro{ATP}{Adenosintriphosphat}
 	\acro{ADP}{Adenosindiphosphat}
-	\acro{P}[P\textsubscript{i}]{Phophatrest}
+	\acro{P}[P\textsubscript{i}]{Phophat}
 	\acro{H2O}[H\textsubscript{2}O]{Wasser}
 	\acro{H+}[H\textsuperscript{+}]{Wasserstoff}
 	\acro{CrP}{Kreatinphosphat}
