--- a/Diskussion.tex
+++ b/Diskussion.tex
@@ -34,7 +34,8 @@ Zwar wurde in der Einleitung darauf hingedeutet, dass VT1 für ein alternatives 
 
 \section{Problematik von RQ = 1}
 
-Tab. \ref{tab:tabelle6} beweist sehr deutlich, dass die Methode RQ = 1 zur alleinigen Bestimmung der VT2 nicht valide ist. Bei 9 von 28 Personen stieg der Wert nicht über eins, sodass VT2 gar nicht bestimmt werden konnte. Hier ließe sich diskutieren, ob diese Personen tatsächlich kardiorespiratorisch ausbelastet waren, oder den Test wegen muskulärer Erschöpfung beendet haben. Dennoch konnte bei diesen neun Probanden mit \acs{EQCO2} sowie \acs{VE}/\acs{VCO2} VT2 bestimmt werden. Bei zehn Personen, bei denen mit der Referenzmethode eine VT2 definiert werden konnte, weichen die Werte jedoch von den übrigen Methoden mit \SI{10}{\per\minute} oder mehr ab. Darüber hinaus wurden für den MATLAB-Algorithmus bereits Ausgleichskurven für den RQ implementiert. Diese sorgen jedoch nicht dafür, dass die Mehrheit der Messergebnisse mit den übrigen Methoden vergleichbar wird. Der Algorithmus wird künftig aus der \acs{CCPS} entfernt und durch die genauere \acs{EQCO2}-Methode ersetzt.
+Tab. \ref{tab:tabelle6} beweist sehr deutlich, dass die Methode RQ = 1 zur alleinigen Bestimmung der VT2 nicht valide ist. In Kapitel 1.3 wurde erwähnt, dass der RQ einst häufig zu früh den Wert eins überschritt und die Schwellenbestimmung dadurch fehlerhaft wurde. Dieser Fall trat bei den Ergebnissen der 28 Tests nicht auf. Dies ist jedoch dadurch begründet, dass durch cardioscans Entwicklung Ausgleichsgeraden in den Algorithmus implementiert wurden. Darüber hinaus wurde vor Start des Projektes ein Befehl aus der Ansteuerung der metabolicscan entfernt, der bewirkt hatte, dass dieser sich zwischen den einzelnen Belastungsstufen rekalibriert. Da jedoch bei einer Spiroergometrie durch den Probanden mehr \acs{CO2} exspiriert wird und die Räumlichkeiten währenddessen nicht belüftet werden, um Störungen des Flowsensors zu vermeiden, steigt entsprechend die \acs{CO2}-Konzentration der Luft. Dies konnte gemessen werden und wirkte sich somit auf die Kalibrierung des Geräts aus, sodass ungewollte Drifts in der RQ-Kurve entstanden.\\
+Bei 9 von 28 Personen stieg der Wert stattdessen gar nicht über eins, sodass die VT2 gar nicht bestimmt werden konnte. Hier ließe sich diskutieren, ob diese Personen tatsächlich kardiorespiratorisch ausbelastet waren, oder den Test wegen muskulärer Erschöpfung beendet haben. Dennoch konnte bei diesen neun Probanden mit \acs{EQCO2} sowie \acs{VE}/\acs{VCO2} die VT2 bestimmt werden. Bei zehn Personen, bei denen mit der Referenzmethode eine VT2 definiert werden konnte, weichen die Werte jedoch von den übrigen Methoden mit \SI{10}{\per\minute} oder mehr ab. Darüber hinaus wurden für den MATLAB-Algorithmus bereits Ausgleichskurven für den RQ implementiert. Diese sorgen jedoch nicht dafür, dass die Mehrheit der Messergebnisse mit den übrigen Methoden vergleichbar wird. Der Algorithmus wird künftig aus der \acs{CCPS} entfernt und durch die genauere \acs{EQCO2}-Methode ersetzt.
 
 \section{Limitation}
 
